[project]
name = "mula"
version = "0.1.0"
description = "Machine Learning's Ultimate Learning Archive - Educational implementations of ML papers in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.2.1",
    "chex==0.1.91",
    "grain==0.2.12",
    "jax==0.7.2",
    "flax==0.12.0",
    "ml_dtypes==0.5.3",
    "optax==0.2.6",
    "orbax-checkpoint==0.11.25",
    "orbax-export==0.0.8", 
]

[project.optional-dependencies]
# GPU support for Apple Silicon
metal = [
    "jax-metal>=0.1.0",
]

# Video recording support
video = [
    "moviepy>=1.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "jax-metal>=0.1.0",
    "moviepy>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
