[project]
name = "mula"
version = "0.1.0"
description = "Machine Learning's Ultimate Learning Archive - Educational implementations of ML papers in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.2.1",
    "jax==0.5.0",
    "jaxlib>=0.4.26",
    "flax==0.10.4",  # Latest version with NNX support
    "optax>=0.1.0,<0.2.0",  # Compatible with JAX 0.5.0
    "chex>=0.1.85,<0.1.91",  # Compatible with JAX 0.5.0
]

[project.optional-dependencies]
# GPU support for Apple Silicon
metal = [
    "jax-metal>=0.1.1",
]

# Video recording support
video = [
    "moviepy>=1.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "jax-metal>=0.1.0",
    "moviepy>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
